<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/raceSetupFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/race_setup"
        />

    <item
        android:id="@+id/boatSetupFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/boat_setup"
        />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/app_settings"
        />

    <item
        android:id="@+id/calibrationFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/instrument_calibration"
        />

</menu>
